# dara

./: .gitignore  .npmrc  AGENTS.md  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  anthology.toml  bearer.yml  borg.toml  cookie-auth-migration-plan.md  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  ruff.toml  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE  dependabot.yml  prace.yml
.github/workflows/: check-prace.yml  prace.yml  publish_docs.yml  release.yml  tests.yml
dara/: main.py
docs/: faq.md  quickstart.md  sidebar.json
docs-internal/: README.md
docs-internal/proposals/: auth-session-and-secret-storage.md  dara-js-build-redesign.md  dara-stateless-mode.md
docs/advanced/: cache-policies.mdx  custom-js.mdx  custom-middlewares.md  custom-templates.md  custom-themes.md  devtools.md  heavy-io.md  import-discovery.md  loading-states.md  persistence-and-collaboration.mdx  progress-tracking.md  styling-components.md
docs/best-practices/: app-structure-breakdown.md  consistent-styling.md  designing-apps.mdx  laying-out-apps.md  light-pycomponents.md  retaining-correct-variable-types.md  using-environment-variables.md
docs/getting-started/: actions.md  app-building.md  app-structure.md  components.md  handling-data.mdx  interactivity.mdx  local-setup.mdx  routing.mdx  templates.md  whats-dara.md
src/dara/core/: logo.py  main.py
tooling/changelog-parser/: README.md  esbuild.js  main.js  package.json  tsconfig.json
tooling/changelog-parser/src/: get-changelog.ts  index.ts
tooling/get-cypress-version/: .prettierrc.json  README.md  esbuild.js  main.js  package.json  tsconfig.json
tooling/get-cypress-version/src/: get-cypress-version.ts  index.ts
tooling/scripts/: docs-upload.py  link-packages.sh  run_borg_script.py  update-licenses.mjs  update-readme-urls.sh  update-readmes.py  update_package_version.sh
tools/local-oidc-provider/: README.md  package.json
tools/local-oidc-provider/src/: profile.mjs  profiles.mjs  server.mjs  smoke.mjs
