[build-system]
requires = ["poetry"]
[tool.poetry]
name = "borg-meta-package"
version = "1.10.5"
description = "Borg Meta Package"
authors = ["borg"]

[tool.poetry.dependencies]
prometheus-client = "^0.14.1"
typing-extensions = ">=4.5.0"
anyio = ">=4.0.0"
pyarrow = "*"
fastapi-vite = "^0.3.1"
click = "=8.1.3"
pyjwt = ">=2.0.1, <3.0.0"
python-multipart = "^0.0.7"
toml = "^0.10.2"
cryptography = ">=42.0.4"
python = ">=3.8.0, <3.12.0"
fastapi = "^0.109.0"
scipy = "*"
async-asgi-testclient = "^1.4.11"
odfpy = "*"
matplotlib = ">=2.0.0"
tblib = "^1.7.0"
cai-causal-graph = ">=0.3.6"
pyxlsb = "*"
pydantic = ">=1.8.1, <2.0.0"
dara-core = "=1.10.5"
cookiecutter = "^2.1.1"
exceptiongroup = "^1.1.3"
packaging = "^23.1"
pandas = ">=1.1.0, <3.0.0"
plotly = ">=5.14.0, <5.15.0"
colorama = "^0.4.6"
seaborn = ">=0.11.0"
python-dotenv = ">=0.19.2"
aiorwlock = "^1.4.0"
croniter = "^1.0.15"
dill = ">=0.3.0, <0.4.0"
jinja2 = ">=2.1.1, <3.1.0"
responses = "^0.18.0"
xlrd = "*"
httpx = ">=0.23.0"
openpyxl = "*"
bokeh = ">=3.1.0, <3.2.0"

[tool.poetry.dependencies.create-dara-app]
version = "=1.10.5"
optional = true

[tool.poetry.dependencies.dara-components]
version = "=1.10.5"
optional = true

[tool.poetry.dependencies.uvicorn]
version = "^0.22.0"

[tool.poetry.dev-dependencies]
pylint = "^3.2.3"
isort = "^5.10.1"
types-croniter = "^1.0.10"
freezegun = "^1.2.2"
blue = "^0.9.1"
bandit = "^1.7.5"
pytest-timeout = "^2.1.0"
types-requests = "^2.28.1"
pytest = "^7.0.0"
requests = ">=2.25.1, <3.0.0"
mypy = "^1.6.0"

[tool.poetry.dev-dependencies.dara-core]
path = "packages/dara-core"
develop = true

[tool.poetry.dev-dependencies.create-dara-app]
path = "packages/create-dara-app"
develop = true

[tool.poetry.dev-dependencies.dara-components]
path = "packages/dara-components"
develop = true
[tool.borg.scripts]
