[tool.poetry]
name = "anthology-meta-package"
version = "1.22.4"
description = "Anthology Meta Package"
authors = ["anthology"]
source = []
package-mode = false

[tool.poetry.dependencies]
aiorwlock = ">=1.4.0,<2.0.0"
anyio = ">=4.0.0"
async-asgi-testclient = ">=1.4.11,<2.0.0"
backoff = ">=2.2.1,<3.0.0"
bokeh = "3.1.1"
cachetools = ">=5.0.0"
cai-causal-graph = ">=0.3.6"
certifi = ">=2024.7.4"
click = ">=8.1.3,<9.0.0"
colorama = ">=0.4.6,<0.5.0"
cookiecutter = ">=2.1.1,<3.0.0"
croniter = ">=6.0.0,<7.0.0"
cryptography = ">=42.0.4"
dara-core = "1.22.4"
dill = ">=0.3.0,<0.4.0"
exceptiongroup = ">=1.1.3,<2.0.0"
fastapi = ">=0.115.0,<0.121.0"
fastapi_vite_dara = "0.4.0"
h11 = ">=0.16.0"
httpx = ">=0.23.0"
jinja2 = ">=2.1.1,<3.2.0"
jsonpatch = ">=1.33"
matplotlib = ">=2.0.0"
odfpy = "*"
openpyxl = "*"
packaging = ">=23.1"
pandas = ">=1.1.0,<3.0.0"
plotly = ">=5.14.0,<5.15.0"
prometheus-client = ">=0.14.1,<0.15.0"
pyarrow = "*"
pydantic = ">=2.11.7,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"
pyjwt = ">=2.3.0,<3.0.0"
python = ">=3.10.0,<3.13.0"
python-dotenv = ">=0.19.2"
python-multipart = ">=0.0.7"
pyxlsb = "*"
responses = ">=0.18.0,<0.19.0"
scipy = "*"
seaborn = ">=0.11.0"
tblib = ">=1.7.0,<2.0.0"
toml = ">=0.10.2,<0.11.0"
typing-extensions = ">=4.5.0"
xlrd = "*"

[tool.poetry.dependencies.create-dara-app]
optional = true
version = "1.22.4"

[tool.poetry.dependencies.dara-components]
optional = true
version = "1.22.4"

[tool.poetry.dependencies.uvicorn]
extras = ["standard"]
version = ">=0.23.1"

[tool.poetry.dev-dependencies]
bandit = ">=1.7.5,<2.0.0"
freezegun = ">=1.2.2,<2.0.0"
google-auth = ">=2.37.0,<3.0.0"
pyright = ">=1.1.400,<2.0.0"
pytest = ">=7.0.0,<8.0.0"
pytest-timeout = ">=2.1.0,<3.0.0"
pytest-xdist = ">=3.8.0,<4.0.0"
requests = ">=2.25.1,<3.0.0"
respx = ">=0.22.0,<0.23.0"
ruff = ">=0.12.2"
types-cachetools = ">=6.0.0.20250525,<7.0.0.0"
types-croniter = ">=1.0.10,<2.0.0"
types-requests = ">=2.28.1,<3.0.0"

[tool.poetry.dev-dependencies.dara-core]
path = "packages/dara-core"
develop = true

[tool.poetry.dev-dependencies.ui-hierarchy-viewer]
path = "packages/ui-hierarchy-viewer"
develop = true

[tool.poetry.dev-dependencies.ui-widgets]
path = "packages/ui-widgets"
develop = true

[tool.poetry.dev-dependencies.prettier-config]
path = "packages/prettier-config"
develop = true

[tool.poetry.dev-dependencies.styled-components]
path = "packages/styled-components"
develop = true

[tool.poetry.dev-dependencies.ui-icons]
path = "packages/ui-icons"
develop = true

[tool.poetry.dev-dependencies.ui-components]
path = "packages/ui-components"
develop = true

[tool.poetry.dev-dependencies.stylelint-config]
path = "packages/stylelint-config"
develop = true

[tool.poetry.dev-dependencies.eslint-config]
path = "packages/eslint-config"
develop = true

[tool.poetry.dev-dependencies.create-dara-app]
path = "packages/create-dara-app"
develop = true

[tool.poetry.dev-dependencies.ui-notification]
path = "packages/ui-notifications"
develop = true

[tool.poetry.dev-dependencies.dara-components]
path = "packages/dara-components"
develop = true

[tool.poetry.dev-dependencies.ui-utils]
path = "packages/ui-utils"
develop = true

[tool.poetry.dev-dependencies.ui-causal-graph-editor]
path = "packages/ui-causal-graph-editor"
develop = true

[build-system]
requires = ["poetry"]
